--- a/css/style.css
+++ b/css/style.css
@@ -807,7 +807,13 @@ footer .logo {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.01em;
+  color: var(--list-text-color);
   width: 100%;
+  padding: 40px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -816,14 +822,20 @@ footer .logo {
   font-size: 20px;
   line-height: 1.15;
   letter-spacing: 0.03em;
+  margin-bottom: 20px;
+  text-align: center;
   color: var(--primary-text-color);
 }
 .form-field {
   position: relative;
+  margin-bottom: 5px;
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.01em;
+  color: var(--list-text-color);
+}
+.form-label {
   color: var(--list-text-color);
 }
 .form-comment::placeholder {
@@ -836,10 +848,9 @@ footer .logo {
 .form-input {
   width: 100%;
   height: 40px;
-  margin-top: 4px;
+  margin-top: 8px;
   margin-bottom: 10px;
   padding: 12px 0 12px 40px;
-
   border: 1px solid rgba(33, 33, 33, 0.2);
   box-sizing: border-box;
   border-radius: 4px;
@@ -849,8 +860,9 @@ footer .logo {
 }
 .label-icon {
   position: absolute;
-  top: 30px;
+  top: 50%;
   left: 15px;
+  transform: translateY(-50%);
 }
 .form-field:focus-within .label-icon {
   fill: var(--accent-color);
@@ -885,20 +897,7 @@ footer .logo {
   border-radius: 4px;
   transition: box-shadow 100ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.form-requst {
-  padding: 40px;
-}
-.requst {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 1.15;
-  text-align: center;
 
-  color: var(--primary-text-color);
-}
-.form-field {
-  position: relative;
-}
 .form-checkbox {
   display: flex;
   align-items: center;
